--- a/PRATICAS/estilo.css
+++ b/PRATICAS/estilo.css
@@ -1,20 +1,36 @@
 .primeira {
-    color: white;
-    background-color: red;
-    text-align: right;
-    font-size: 30pt;
+  color: white;
+  background-color: red;
+  text-align: right;
+  font-size: 30pt;
 }
 
 .segunda {
-    color: blue;
-    background-color: yellow;
-    text-align: center;
-    font-size: 40pt;
+  color: blue;
+  background-color: yellow;
+  text-align: center;
+  font-size: 40pt;
 }
 
 .terceira {
-    color: black;
-    background-color: white;
-    text-align: center;
-    font-size: 50pt;
+  color: black;
+  background-color: white;
+  text-align: center;
+  font-size: 50pt;
+}
+
+.AbaixoMinimo {
+  background-color: orange;
+}
+
+.AcimaMaximo {
+  background-color: red;
+}
+
+.Meio {
+  background-color: green;
+}
+
+.Margem {
+  background-color: gray;
 }
