Altereção do CSS e do Footer

--- a/financeiro/assets/css/custom.css
+++ b/financeiro/assets/css/custom.css
@@ -42,7 +42,7 @@ body {
     border:1px solid #f3f3f3;
 }
 h2 {
-    color: #0d5e02;
+    color: #42c6fa;
 }
 h4 {
     padding-top:10px;
@@ -207,7 +207,7 @@ max-width:170px;
 
 .navbar-cls-top .navbar-brand {
 	color: #fff;
-background: #0d5e02;
+background: #42c6fa;
 width: 260px;
 text-align: center;
 height: 60px;
@@ -215,7 +215,7 @@ font-size: 25px;
 font-weight: 700;
 }
 .active-menu {
-    background-color:#0d5e02!important;
+    background-color:#42c6fa!important;
 }
 
 .arrow {
@@ -276,7 +276,7 @@ font-weight: 700;
 	left:20px;
 	width:15px;
 	height:1px;
-	background:#0d5e02;
+	background:#42c6fa;
 	top:20px;
 }
 .nav-second-level > li > a:after,
@@ -311,7 +311,7 @@ font-weight: 700;
 }
 .navbar-cls-top .navbar-brand:hover {
 
-background: #0d5e02;
+background: #42c6fa;
 color:#fff;
 
 }
@@ -321,10 +321,10 @@ border:0px solid black;
      
 }
 .navbar-header {
-    background: #0d5e02;
+    background: #42c6fa;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-background-color: #0d5e02;
+background-color: #42c6fa;
 }
 .navbar-default .navbar-toggle {
 border-color: #fff;
