Atualização do CSS e comendos de BD

--- a/financeiro/assets/css/custom.css
+++ b/financeiro/assets/css/custom.css
@@ -287,7 +287,7 @@ font-weight: 700;
 	left:20px;
 	width:1px;
 	height:100%;
-	background:#0d5e02;
+	background:#42c6fa;
 	top:0px;
 	z-index:10;
 }
